fix overflow-x body and create portfolio block

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -9,26 +9,20 @@
 }
 
 body {
-	background-image: radial-gradient(
-		ellipse at center, 
-		rgb(62, 9, 62) 0%, 
-		rgba(0,0,0,1) 100%
-	);
-}
-
-body::after {
-	content: '';
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	left: 0;
+	overflow-x: hidden;
 	background: 
 		repeating-linear-gradient(
-		45deg, transparent,
-		transparent 1px, 
-		rgba(0, 0, 0, .8) 10px, 
-		rgba(255,255,255, 1) 10px
-	);
+			45deg, transparent,
+			transparent 1px, 
+			rgba(0, 0, 0, .8) 10px, 
+			rgba(255,255,255, 1) 10px
+			),
+		radial-gradient(
+			ellipse at center, 
+			rgb(62, 9, 62) 0%, 
+			rgba(0,0,0,1) 100%
+		);
+	min-height: 100vh;
 }
 
 a {
@@ -143,4 +137,19 @@ a {
 }
 /* /Header */
 
+.container {
+	max-width: 1140px;
+	margin: 0 auto;
+}
+
+/* Portfolio */
+.portfolio {
+	margin-top: 50px;
+}
+
+.portfolio__title {
+	text-align: center;
+}
+/* /Portfolio */
+ 
 /* /Content */
